
24-02-2020, Coruja
Added: Support for function MAPWAYPOINT on classic clients >= 7.0.84.0.
	-NOTE: Enhanced clients support all waypoint types, but classic clients only support type 0 (remove) and 6 (healer)

06-03-2020, Coruja
Fixed: Items being teleported to P=[0~100],[0~100] when dropped into containers that will exceed max weight limit.
Changed: Large containers now can be placed inside small containers.
[sphere.ini]: Added new BackpackMaxWeight setting to set default max weight limit for chars main backpack

07-03-2020, Coruja
Changed: Chars now can exceed MAXWEIGHT limit, but not backpack max weight limit (which is a bit higher)
	-Walking while overweight will drop stamina faster (as it was on old Sphere versions)
	-Stamina penalty can be customized using StaminaLossAtWeight and RunningPenalty settings on sphere.ini
	-Backpack max weight can be customized using BackpackMaxWeight setting on sphere.ini and MODMAXWEIGHT item property
[sphere_msgs.scp]: Updated message list with the following changes
	-Added: cont_full_items, msg_fatigue_weight
	-Removed: cont_full, cont_magic, cont_toosmall, msg_heavy, msg_overload
	-Updated: cont_full_weight

17-03-2020, Coruja
Fixed: HEARALL function not working correctly.
Fixed: BackpackMaxWeight setting on sphere.ini not allowing unlimited weight when set to -1.
[sphereCrypt.ini]: Added crypt key for classic client 7.0.85 and enhanced client 4.0.85

20-03-2020, Coruja
Fixed: Containers not checking sub-containers weight correctly.
Fixed: WEIGHTREDUCTION item property not working correctly.

27-03-2020, Coruja
Fixed: Triggers @PreStart (skills) / @SkillPreStart (chars) incorrectly setting char ACTION before skill start.
Changed: Updated internal Libev libs v4.31 to v4.33.

10-04-2020, Coruja
Fixed: Snooping skill revealing hidden chars at wrong moment.

11-04-2020, Coruja
Fixed: Skills getting increased to 6553.5 when set to a negative value.