@@ -230,11 +230,11 @@ ArcheryMinDist=2
 // Maximum Distance for Archery
 ArcheryMaxDist=15
 
-// This is the percent of max weight at which stamina is lost half the time (200 = no effect)
-StaminaLossAtWeight=150
+// Stamina to lose at each step when walking while overweight (NOTE: value is also increased by 1 at each 25 stones exceeded, and divided by 3 on mounted chars)
+StaminaLossAtWeight=5
 
-// Weight penalty for running +N% of max carry weight (0 = no effect)
-RunningPenalty=50
+// Stamina penalty % to apply over StaminaLossAtWeight when running (0 = no penalty)
+RunningPenalty=100
 
 // Are house and boat keys newbied automatically
 AutoNewbieKeys=1
